# target-dynamics-onprem

./: README.md  meltano.yml  pyproject.toml
payload_example/: data.singer
target_dynamics_onprem/: client.py  sinks.py  target.py
target_dynamics_onprem/tests/: __init__.py  test_core.py
