[tool.poetry]
name = "target-dynamics-onprem"
version = "0.0.9"
description = "`target-dynamics-onprem` is a Singer target for Montapackingv2, built with the Meltano SDK for Singer Targets."
authors = ["Hotglue"]
keywords = [
    "ELT",
    "DynamicsOnprem",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "2.26.0"
singer-sdk = "^0.9.0"
target-hotglue = {git = "https://gitlab.com/hotglue/target-hotglue-sdk.git", rev = "main"}
requests_ntlm = "1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_montapackingv2"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-dynamicsonprem = 'target_dynamics_onprem.target:TargetDynamicsOnprem.cli'
